--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -168,7 +168,7 @@ Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ::: voice-father
-父「ん？そりゃ当たってるよ。仮定した確率分布が正しければね。証明もできるよ」
+父「ん？そりゃ当たってるよ。仮定した確率モデルが正しければね。証明もできるよ」
 :::
 
 ::: voice-daughter
@@ -196,21 +196,29 @@ Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ::: voice-daughter
-私「これがcoverageね」
+私「ん？私、調査は1回しかしないつもりだけど」
 :::
 
 ::: voice-father
-父「生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Cox回帰の仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
+父「そこにギャップがある。確率モデルって言葉をよく使って話してるでしょ。統計家が話しているモデルは、具体的な研究とは別世界の抽象概念だと思った方がいい。データとRとシミュレーションでつながっているだけ。別世界の誰かが1000回の研究をしたと考えるんだ」
 :::
 
 ::: voice-daughter
-私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね。」
+私「ふーん。そこで当たりがでた割合がcoverageね」
+:::
+
+::: voice-father
+父「そう。生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Cox回帰の仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
+:::
+
+::: voice-daughter
+私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね」
 :::
 :::::::::::::::::::::::::::::::::
 
 
 ::: {.callout-note appearance="simple"  title="coxph()を用いた95%信頼区間のシミュレーション"}
-ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは**survival**パッケージの`coxph()`です。以前のデモで、関数generate_data(hr1, hr2)を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
+ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは**survival**パッケージの`coxph()`です。以前のデモで、`generate_data(hr1, hr2)`を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
 :::
 
 ::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
@@ -303,7 +311,7 @@ print(coverage_200)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「だいたいcoverageが95%になるっていうのはわかった。でも結局、95%信頼区間ってどう理解すればいいの？」
+私「だいたいcoverageが95%になるっていうのは確認した。でも結局、95%信頼区間ってどう理解すればいいの？」
 :::
 
 ::: voice-father
@@ -311,7 +319,7 @@ print(coverage_200)
 :::
 
 ::: voice-daughter
-私「1回の研究で“この区間が当たっている確率が95%”って意味じゃないんだね」
+私「いやわかりにくいだろ。1回の研究で"この区間が当たっている確率が95%"って意味じゃないんだね」
 :::
 
 ::: voice-father
@@ -388,7 +396,7 @@ print(coverage_800)
 
 表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
 
-| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
+| 割合 $\pi$ | 0.05 | 0.10 | 0.15 | 0.20 |
 |--------|-----:|-----:|-----:|-----:|
 | 0.01   |  108 |   43 |   25 |   17 |
 | 0.02   |  152 |   52 |   29 |   19 |
@@ -410,7 +418,7 @@ print(coverage_800)
 
 表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
 
-| 割合 π | 0.05 | 0.10 | 0.15 | 0.20 |
+| 割合 $\pi$ | 0.05 | 0.10 | 0.15 | 0.20 |
 |--------|-----:|-----:|-----:|-----:|
 | 0.16   |  826 |  206 |   92 |   51 |
 | 0.17   |  867 |  216 |   96 |   54 |
@@ -443,7 +451,7 @@ print(coverage_800)
 :::
 
 ::: voice-father
-お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”π=0.2”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
+お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”$\pi=0.2$”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
 :::
 
 ::: voice-daughter
