--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -154,7 +154,6 @@ a:hover {
 Keywords: probability model, p-value, simulation, study design, survival/competing-risk
 :::
 
-
 ------------------------------------------------------------------------
 
 ### あれ？何人に調査すればいいんだろう
@@ -219,8 +218,6 @@ Keywords: probability model, p-value, simulation, study design, survival/competi
 ::: voice-father
 お父さん「ありがとう。αエラー・βエラーは、表にしないと説明できないからね」
 :::
-
-
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple"  title="αエラーとβエラー"}
@@ -262,11 +259,18 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「ナプキンに描いてくれた表自体はわかるんだけどね。そこからαとかβとか確率とかいわれてもなあ。ついていけないな」
+私「紙ナプキンに描いてくれた表自体はわかるんだけどね。そこからαとかβとか確率とかいわれてもなあ。ついていけないな」
 :::
 
 ::: voice-father
-お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と同じかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
+お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。まず、αエラーとβエラーの意味から確認させて」
+:::
+
+- αエラー: 「効果がない」という確率モデル上で計算されたエラーの確率
+- βエラー: 「効果がある」という確率モデル上で計算されたエラーの確率
+
+::: voice-father
+お父さん「JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と差がないかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
 :::
 
 ::: voice-daughter
@@ -282,7 +286,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国SWOGの統計家たちは、教科書で以下のように述べている（Green, et al. 2013）。
+お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国臨床試験グループSWOGの統計家たちは、教科書で以下のように述べている（Green, et al. 2013）。
 
 > 新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している
 
@@ -304,7 +308,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 両側 α=0.05, 1−β=0.8\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
+|$\pi_2$|$\pi_1=0.1$|  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
 |------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
 | 0.15 |    964 |    — |    — |    — |    — |    — |    — |    — |
 | 0.20 |    296 |    — |    — |    — |    — |    — |    — |    — |
@@ -329,7 +333,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 両側 α=0.05, 1−β=0.9\
 ※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
 
-| π2   | π1=0.1 |  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
+|$\pi_2$|$\pi_1=0.1$|  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
 |------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
 | 0.15 |   1290 |    — |    — |    — |    — |    — |    — |    — |
 | 0.20 |    396 |    — |    — |    — |    — |    — |    — |    — |
@@ -350,7 +354,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮説の値でいいよ」
+お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮の値でいいよ」
 :::
 
 ::: voice-daughter
@@ -378,7 +382,15 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-daughter
-私「ふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
+私「ふむ。この人数も、確率モデルで計算したの？」
+:::
+
+::: voice-father
+お父さん「もちろん、この書籍の著者がね」
+:::
+
+::: voice-daughter
+私「ふむふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
 :::
 
 ::: voice-father
@@ -449,13 +461,12 @@ ssizeCT.default(
 お父さん「割付け比$K$が1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（$nE+nC$）は100+100人から19+118人、41+161人に変化するみたいだね」
 :::
 
-
 ::: voice-daughter
 私「えー、$K$ってストーマありの割合だよね、そんなのまだわからないもの。思ったより人数が必要かもってことだよね。調査する施設を増やすかどうか考えないと」
 :::
 
 ::: voice-father
-お父さん「気持ちはわかるよ。頻度論の立場で厳密に研究をデザインすると、だいたい最初は“そんなに集められないよ”って顔になるからね」
+お父さん「気持ちはわかるよ。頻度論の立場で厳密に研究をデザインすると、だいたい最初は"そんなに集められないよ"って顔になるからね」
 :::
 
 ::: voice-daughter
