--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -215,7 +215,7 @@ Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「薬の臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるけど、実際には研究ごとに様々なエンドポイントが用いられる。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
+お父さん「臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるよね。研究によって研究仮説が違うから、それにあわせて様々なエンドポイントが選ばれる。進行がんではがんの増悪に注目した無増悪生存期間、根治切除後の研究では無再発生存期間とかね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
 :::
 
 | エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
@@ -233,6 +233,14 @@ Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk
 :::
 
 ::: voice-father
+お父さん「この表は、臨床試験グループが研究計画書を作るときのものなんだ。研究計画書は、医師や統計家がチームになって書くからね。定義を決めておかないと混乱する。このグループでは"one word one meaning"がモットーなんだ」
+:::
+
+::: voice-daughter
+私「だよね、私もこんがらがり中だわ」
+:::
+
+::: voice-father
 お父さん「OSは、**生存時間の原点（time origin）**から死亡するまでの期間のこと。DFSは、時間原点から再発、2次がん、死亡のうち、最初のイベントまでの期間のこと。でも、さっき言ったみたいに、3年OSとか3年DFSという言い方をすることもある。この場合は期間じゃなくて確率の意味になる。OSとDFSの違いは、再発と2次がんが含まれること。そうすると、3年OSより3年DFSの方が、確率は小さくなるよね」
 :::
 
@@ -241,19 +249,26 @@ Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「じゃあ、どの時点から生存時間をスタートするか、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
+お父さん「じゃあ、どの時点から生存時間をスタートするか、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね」
 :::
 
 ::: voice-daughter
-私「観察のスタート時点のことね、たしかに大切。実は今、調査票作ってて、DFSとかOSを正確に知りたかったんだ。聞いてよかった、また相談するね」
+私「あーよくみるやつだわ」
+:::
+
+::: voice-father
+お父さん「でしょ。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
+:::
+
+::: voice-daughter
+私「なるほどね、研究によって微妙に定義が違うもんね。実は今、調査票作っててね。お父さんがアウトカムにうるさいって周りに話したら、みんな意外とちゃんと区別してて。DFSとかOSを正確に知りたかったんだ。聞いてよかった、また相談するね」
 :::
 :::::::::::::::::::::::::::::::::
-
 
 ::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
 OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが**臨床エンドポイント（clinical endpoint）**とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
-その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、**代替エンドポイント（surrogate endpoint）**として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and Demets 1996）。
+その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、**代替エンドポイント（surrogate endpoint）**として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and DeMets 1996）。
 :::
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
@@ -276,11 +291,13 @@ OS、DFS、RFSは、特に術後補助化学療法の有効性を評価すると
 
 ### 文献
 
-- [薬生薬審発0331第1号. 抗悪性腫瘍薬の臨床評価方法に関するガイドライン [Internet]. 東京: 厚生労働省医薬・生活衛生局医薬品審査管理課長; 2021](https://www.pmda.go.jp/files/000243746.pdf)
-
 - Biomarkers Definitions Working Group. Biomarkers and surrogate endpoints: preferred definitions and conceptual framework. Clin Pharmacol Ther 2001;69(3):89-95
 
 - Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
+
+- [JCOGプロトコールマニュアル version 3.8 [Internet]. 東京: Japan Clinical Oncology Group; 2025](https://jcog.jp/doctor/tool/manual/) 
+
+- [薬生薬審発0331第1号. 抗悪性腫瘍薬の臨床評価方法に関するガイドライン [Internet]. 東京: 厚生労働省医薬・生活衛生局医薬品審査管理課長; 2021](https://www.pmda.go.jp/files/000243746.pdf)
 
 ### エピソードとRスクリプト
 
