--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -160,7 +160,7 @@ Keywords: bias, observational study, hypothesis/outcome/population, simulation, 
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「今、話しかけていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？」
+私「今、話しかけていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？あ、この前のRも参考になったよ、調査結果が想像できた」
 :::
 
 ::: voice-father
@@ -204,7 +204,7 @@ Keywords: bias, observational study, hypothesis/outcome/population, simulation, 
 :::
 
 ::: voice-father
-お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを**時間原点**にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後に生じたイベントは除外してはならない」
+お父さん「そうだね。除外するとバイアスが生じると思う。ターゲットにしている集団からずれちゃうからね。がん患者を追跡するような研究をするとき、大切なことが3つある。1つ、どのタイミングを**時間原点**にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。情報が取れないとバイアスが生じる原因になる。3つ、時間原点後に生じたイベントは除外してはならない」
 :::
 :::::::::::::::::::::::::::::::::
 
