--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -215,11 +215,11 @@ Keywords: bias, confounding/collapsibility, observational study, simulation, sur
 :::
 
 ::: voice-daughter
-私「いいよ。死亡調査って大変だよね」
+私「どうぞご自由に。死亡調査って大変だよね」
 :::
 
 ::: voice-father
-お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
+お父さん「そうそう。もっと細かいことをいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
 :::
 
 ::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
@@ -425,11 +425,11 @@ print(km_panel)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「わかった？シミュレーションで使った確率分布は、研究でなにが起きるかを抽象化した数理モデルなんだ。どんな統計手法も使用条件みたいなものがあって、前提にしている数理モデルからずれるとバイアスが生じる。モデルの誤特定なんて言い方をするね」
+お父さん「わかった？シミュレーションデータを発生させたアルゴリズムは**確率モデル**っていって、研究でなにが起きるかを抽象化した数理モデルなんだ。どんな統計手法も使用条件みたいなものがあって、前提にしている確率モデルからずれるとバイアスが生じる。モデルの誤特定なんて言い方をするね」
 :::
 
 ::: voice-daughter
-私「なるほどね。再発確率と死亡確率の和が1を超えることはあり得ないよ、Kaplan–Meier曲線にバイアスが生じていることの証拠だよっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
+私「なるほどね。再発確率と死亡確率を足して1を超えることはあり得ない、Kaplan–Meier曲線にバイアスが生じていることの証拠だっていいたいのね。でも、こんなマニアックなバイアスじゃなくて、調査を行う上で何に注意した方がいいか聞いたつもりだったんだけど」
 :::
 ::::::::::::::::::::::::::::::::: 
 
