--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -181,7 +181,7 @@ clinical trial, p-value, survival/competing-risk, language/writing
 :::
 
 ::: voice-father
-お父さん「臨床試験の統計家やってるから、たまにね。どっちかっていうと、論文を書くことの方が多いけど。臨床の最新知識はそこまで仕事で要らないし」
+お父さん「臨床試験の統計家やってるから、たまにね。どっちかっていうと、論文を書くことの方が多いけど。臨床の最新知識はそこまで仕事でいらないし」
 :::
 
 ::: voice-daughter
@@ -243,7 +243,15 @@ clinical trial, p-value, survival/competing-risk, language/writing
 -   図に示されない情報だが登録期間・追跡期間も要確認
 
 ::: voice-daughter
-私「よく考えたら10年以上かかったんだ、この図を描くのに。スタッフは大変だっただろうな。あ、あとさ、生存曲線まわりの英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんていうか教えてよ」
+私「よく考えたら10年以上かかったんだ、この図を描くのに。スタッフは大変だっただろうな。そういえばさ、臨床試験の研究計画書の話がでたでしょ、この前。計画書って参加施設の倫理委員会に出すじゃない。そうしたら基本的に変更しないよね、手続きもいるし」
+:::
+
+::: voice-father
+お父さん「そうだね」
+:::
+
+::: voice-daughter
+私「10年後の先を見越して、しかも誰が読むかもわからないのに、計画を文章にするって怖いよね。100人以上の患者さんも関わってくるし。そりゃあ、アウトカムひとつとっても言葉の意味を固めときたくもなるわ。あ、あとさ、生存曲線まわりの英語についてなんだけど、”hazard ratio”、”95% CI”、”one-sided p”、”two-sided p”は日本語でなんていうか教えてよ」
 :::
 
 ::: voice-father
