--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -164,7 +164,7 @@ Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ::: voice-daughter
-私「ありがとう、ちょうどいいわ。あのさ、ちょっと気になったんだけど。**95%信頼区間（confidence interval）**です”って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
+私「ありがとう、ちょうどいいわ。あのさ、ちょっと気になったんだけど。**95%信頼区間（confidence interval）**って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
@@ -200,7 +200,7 @@ Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ::: voice-father
-父「そこにギャップがある。確率モデルって言葉をよく使って話してるでしょ。統計家が話しているモデルは、具体的な研究とは別世界の抽象概念だと思った方がいい。データとRとシミュレーションでつながっているだけ。別世界の誰かが1000回の研究をしたと考えるんだ」
+父「あのね、聞いて。統計家が話している**確率モデル**は、実際にこれから行われる研究そのものじゃないと思った方がいい。たとえるなら"こういう集団から、こういうルールでデータを発生させて"と別世界に指示を出す手紙なんだ。現実と別世界はデータとRとシミュレーションでつながっている。その手紙に書かれたルールに従って別世界の誰かが研究を1000回繰り返す」
 :::
 
 ::: voice-daughter
@@ -208,7 +208,7 @@ Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ::: voice-father
-父「そう。生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Cox回帰の仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
+父「そう。以前JCOG9502の話をしたとき、"p値が0.05だったら100回に5回は正しい"っていってたよ。自分の経験だと違って見えるものだけど同じこと。それでね、生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Cox回帰の仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
 :::
 
 ::: voice-daughter
@@ -331,7 +331,7 @@ print(coverage_200)
 :::
 
 ::: voice-father
-お父さん「理論的には当たりにくくなったりはしないよ。95%信頼区間の被覆確率はサンプルサイズによらず95%になるはず。n=100、200、400、800のシミュレーション結果をみてみようか」
+お父さん「設計上は当たりにくくなったりはしないよ。95%信頼区間のcoverageはサンプルサイズによらず95%になるように作ってある。n=100、200、400、800のシミュレーション結果をみてみようか」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -364,7 +364,7 @@ print(coverage_800)
 :::
 
 ::: voice-father
-お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。今のところ、何人に調査するつもりだった？」
+お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。つまり、同じ95%でも、どれくらい曖昧な推定値で我慢しないといけないかが変わるんだ。今のところ、何人に調査するつもりだった？」
 :::
 
 ::: voice-daughter
@@ -500,7 +500,7 @@ print(coverage_800)
 
 標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
 
-なお、似て非なる範囲に「平均±1.96×標準誤差」があります。これは頻度論統計学（frequentist statistics）において95%信頼区間（confidence interval）と呼ばれる区間です。
+なお、似て非なる範囲に「平均±1.96×標準誤差」があります。これは「仮想的反復の下で真の平均を95%の割合で包む区間」、すなわち頻度論統計学でいう95%信頼区間に対応します。
 :::
 
 ### 文献
