--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -386,7 +386,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 
 ::: voice-father
-お父さん「もちろん、この書籍の著者がね」
+お父さん「もちろん、この書籍の著者が、別世界の誰かに手紙を出してね」
 :::
 
 ::: voice-daughter
@@ -458,7 +458,7 @@ ssizeCT.default(
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「割付け比$K$が1（1:1）、0.5（2:1）、0.25（4:1）だと、必要サンプルサイズ（$nE+nC$）は100+100人から19+118人、41+161人に変化するみたいだね」
+お父さん「割付け比$K$は$K:1$を意味している。$K=1$（1:1）、$K=0.5$（2:1）、$K=0.25$（4:1）だと、必要サンプルサイズ（$nE+nC$）は100+100人から19+118人、41+161人に変化するみたいだね」
 :::
 
 ::: voice-daughter
