--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -165,13 +165,13 @@ Keywords: confounding/collapsibility, effect measure, hypothesis/outcome/populat
 :::
 
 ::: voice-daughter
-私「ん、いいよ。この表だよね」
+私「えーお手やらわかに。コーヒーももらうわ。この表の話だよね」
 :::
 :::::::::::::::::::::::::::::::::
 
-| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   |$\chi^2$| p値    |
+| パラメータ | 自由度 | 推定値 | 標準誤差 | 95%信頼区間   |$\chi^2$| p値   |
 |------------|--------|--------|----------|---------------|-------|--------|
-| Intercept  | 1      | -27.25 | 3.03     | -33.20～-21.30 | 80.55 | \<0.01 |
+| Intercept  | 1      | -27.25 | 3.03     | -33.20～-21.30| 80.55 | \<0.01 |
 | STOMA      | 1      | 1.41   | 1.54     | -16.1～4.45   | 0.84  | 0.3588 |
 | AGE        | 1      | 1.47   | 1.48     | -1.42～4.36   | 0.99  | 0.3197 |
 | SEX        | 1      | 25.72  | 0.00     | 25.72～25.72  |       |        |
@@ -179,7 +179,7 @@ Keywords: confounding/collapsibility, effect measure, hypothesis/outcome/populat
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「この表は間違いではないんだけど、まだよくできる。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
+お父さん「そう、これね、間違いではないんだけど、まだよくできる。表を作成するときには、情報が自然に入ってくるように、読者の立場で考えなくちゃ。具体的な注意点はこんなところかな」
 :::
 :::::::::::::::::::::::::::::::::
 
