--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -250,7 +250,7 @@ Keywords: bias, confounding/collapsibility, effect measure, simulation, generali
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「なるほどね、オッズ比は層別解析で不安定な指標だってことね。でもさ、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？＋10%とか－10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
+私「なるほどね、オッズ比は層別解析で不安定な指標だってことね。でもさ、そもそも論なんだけど。どうせ割合同士を比べるんだから、わざわざ比をとらなくてもいいんじゃない？パーセントの差でよくない？+10%とか-10%とか。リスクの違いはこれでじゅうぶん伝わるでしょ」
 :::
 
 ::: voice-father
