--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -222,7 +222,7 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 ::: 
 
 ::: voice-father
-お父さん「よかった。ちょっと補足するとね、確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、ロジスティック回帰では、アウトカムと共変量の関係が**ロジット関数（logit）**で結びつくと仮定していること。`glm()`について話したの覚えてる？」
+お父さん「よかった。ちょっと補足するとね、確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、ロジスティック回帰では、アウトカムと共変量の関係が**ロジット関数（logit function）**で結びつくと仮定していること。`glm()`について話したの覚えてる？」
 ::: 
 
 ::: voice-daughter
@@ -233,7 +233,6 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 お父さん「そうだよ。`glm()`の引数は、`family`、`y ~ x1 + x2`、`link`なんだけど`family=binomial()`のように
 2項分布を選ぶと自動的にロジット関数が使われる。ロジスティック回帰の左辺をみてよ」
 ::: 
-
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
@@ -249,10 +248,9 @@ $g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
 です。この関数はロジット関数と呼ばれ、ロジスティック回帰を特徴付けています。
 :::
 
-::::::::::::::::::::::::::::::::: dialogue
-
 ### ロジット関数の特徴
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」
 ::: 
@@ -316,8 +314,11 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: voice-father
 お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。大事なのは`family`、`y ~ x1 + x2`、`link`を選ぶことで、データの型にあった回帰モデルを指定できるってこと。yとxにそれぞれ連続変数を指定すると、散布図に回帰直線を掛くことができるし、計数データにPoisson回帰を当てはめたりもできる。一般化線型モデルは、生存時間データや経時データ以外ならほとんど対応できる汎用的な統計手法なんだ」
 ::: 
+:::::::::::::::::::::::::::::::::
 
 ### ロジスティック回帰の可逆性
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「でもね、その説明だとみんなロジスティック回帰を使ってる理由にはなってないよね。`link="logit"`より`link="identity"`、つまり変換しなくたっていいじゃない」
 ::: 
@@ -331,7 +332,7 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: 
 
 ::: voice-father
-お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、数学では群作用っていうんだけど、ある変換を加えても意味が変わらない操作のこと。ほら、コインの表裏を入れ替えても、コイン投げの確率の本質に影響しないでしょ。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
+お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、**数学では群作用（group action）**っていうんだけど、ある変換を加えても意味が変わらない操作のこと。ほら、コインの表裏を入れ替えても、コイン投げの確率の本質に影響しないでしょ。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
 ::: 
 
 - 確率分布: 2項分布（指数型分布族）
@@ -390,56 +391,13 @@ $$g(1−\pi)=−g(\pi)$$
 $$g(\pi)=\log \left(\frac{\pi_i}{1-\pi_i}\right)$$
 
 ::: voice-daughter
-:::
 私「それがロジット関数ってことか。データを人工的に変換しても解析結果が変わらないってこと？」
 :::
 
 ::: voice-father
-:::
-お父さん「あれ、そこまでは説明しなかったけど、その通り。可逆性があるモデルでは、データを変換しても構造もそれに合わせて変わってくれて、本質的に同じ解析結果が得られる。統計手法はね、大半が人間が勝手に決めたものじゃないんだ。数学的な法則性がそっと姿を現しているんだよ」
+お父さん「あれ、そこまでは説明しなかったけど、その通り。可逆性があるモデルでは、データを変換しても構造もそれに合わせて変わってくれて、本質的に同じ解析結果が得られる。みんなが使っている統計手法はね、大半が人間が選んだだけじゃないんだ。数学的な法則がそっと姿を現しているんだよ」
 :::
 ::::::::::::::::::::::::::::::::: 
-
-
-::: {.callout-note appearance="simple" title="データの型と統計手法"}
-
-アウトカムはデータの型によって4種類に分類されます。
-
-- 連続データ （例：血圧やQOL）
-- 分類データ （例：有害事象の有無）
-- 計数データ （例：有害事象の発生件数）
-- 生存時間データ （例：全生存期間）
-
-さらに、分類データはいくつかの種類があり、カテゴリが2通りのものを2値データ、カテゴリに順序があるものを順序データと呼んでいます。生存時間データの一種には、競合リスクを考慮した競合リスクデータがあります。データの型によって、正規分布や2項分布など確率分布が異なりますよね。そのため、それぞれ異なる統計手法が用いられます。詳しくは表をみてください。
-
-仮に、ストーマ造設あり・なしと復職状況の関係を調べたいとすると、2つの変数をモデルに当てはめることになるため、回帰モデルを用いて調べたいとします。このときアウトカムを復職の有無（2値データ）とするなら、ロジスティック回帰を選ぶべきです。もし復職までの期間（生存時間データ）とするなら、Cox回帰の方が適切です。
-
-**個人内で反復測定があるか**
-
-同一個人にくり返し臨床検査やアンケートを行うと、似たような検査結果になりますよね。たとえば、朝と晩に血圧を測ると、2つの測定値に相関が生じます。治療前と治療後に、QOL質問票に回答してもらう場合も、その測定値は独立ではありません。このように1人の患者に複数回の測定値があるデータを**反復測定データ**といいます。反復測定データでは、個人内の測定値は独立ではありません。したがって、独立性を仮定している統計手法（たとえば対応のないt検定や$\chi^2$検定）は不適切です。反復測定データの解析では、**変量効果モデル（random-effects model）**や**一般化推定方程式（generalized estimating equation）**と呼ばれるやや高度な手法が用いられます。この場合の変量効果は、「ひとりひとりの個人の効果」を表しています。これらの方法は、個人内でデータが独立ではないこと（データの相関）を考慮するものです。
-
-**交絡の調整が必要かどうか**
-
-**交絡因子（confounder）**とは、治療とアウトカムとの関係を歪める第三の因子のことです。仮に、ストーマ造設あり・なしと復職状況の関係に、年齢が強くかかわっているとしましょう。そして、ストーマ保有者と非保有者で、平均年齢が異なっているとします。このような場合、2群間の年齢の違いを無視するとバイアスが生じます。これを補正するために、ロジスティック回帰がよく用いられます。 ランダム化臨床試験では、比較する群間で実験条件が揃っているため、交絡の調整は不要です。一方、観察研究（コホート研究やケース・コントロール研究）では交絡の調整は必須です。今回題材にした復職率の調査も観察研究の一種ですから、統計解析ではロジスティック回帰やCox回帰が主に用いられるでしょう。最近では交絡を調整して、正しく因果関係を調べるために、因果推論の手法（プロペンシティスコアなど）を用いることが増えてきました（田中2022）。
-
-| データの型 | 反復測定 | 交絡調整 | 統計手法 | 備考 |
-|---------------|---------------|---------------|---------------|---------------|
-| 連続データ | なし | なし | 対応のない*t*検定、Wilcoxon順位和検定 | 平均の比較 |
-|  | 個人内で2回測定 | なし | 対応のある*t*検定、Wilcoxon符号付順位検定 | 対応のあるデータ |
-|  | なし | なし | 正規線型モデル | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 2値データ | なし | なし | $\chi^2$検定 | 割合の比較 |
-|  | 個人内で2回測定 | あり | McNemar検定 | 対応のあるデータ |
-|  | なし | あり | ロジスティック回帰 | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 計数データ | なし | なし | $\chi^2$検定 | 発生率の比較 |
-|  | なし | あり | Poisson回帰 | 回帰モデルの一種 |
-|  | あり | あり | 変量効果モデル、一般化推定方程式 | 回帰モデルの一種 |
-| 生存時間データ | なし | なし | Kaplan-Meier曲線 | 生存曲線の記述 |
-|  | なし | あり | Cox回帰 | 回帰モデルの一種 |
-| 競合リスクデータ | なし | なし | Aalen-Johansen曲線 | 累積発生率曲線の記述 |
-|  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
-:::
 
 ::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
