--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -332,14 +332,13 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 
 ### This concludes the episode on Truth. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
 
-### エピソード、用語集
+### エピソード
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
 - [Common Causes and Confounders](causal-inference-2.html)
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
 - [Backdoor Paths and Confounders](causal-inference-4.html)
 
-- [Statistical Terms in Plain Language](glossary.html)
 ### To clarify which conceptual layers the issues in this episode belong to, it may help to revisit the previous series:
 
 **1. Study design — 研究の出発点**
