--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -258,7 +258,7 @@ $$
 :::
 
 ::: voice-father
-お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、分からないでしょ。それにね、この数字には数式よりずっとリアルな意味がある」
+お父さん「もう慣れちゃったのかもね。でも、式で書かないと、ワクチン有効率がなんなのか、わからないでしょ。それにね、この数字には数式よりずっとリアルな意味がある」
 :::
 
 ::: voice-daughter
