--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -160,7 +160,7 @@ Keywords: bias, effect measure, generalized linear model
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、コーヒー飲んで寛いでいるところわるいんだけど、時間あるかな。ロジスティック回帰についてなんだけど。説明してくれたのはありがたいんだけどね、群作用とか完全分離とか、途中で分かんなくなっちゃってさ。気になって、先に進めないわけよ」
+私「お父さん、コーヒー飲んで寛いでいるところわるいんだけど、時間あるかな。ロジスティック回帰についてなんだけど。説明してくれたのはありがたいんだけどね、群作用とか完全分離とか、途中でわかんなくなっちゃってさ。気になって、先に進めないわけよ」
 :::
 
 ::: voice-father
@@ -249,11 +249,19 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 :::
 
 ::: voice-father
-お父さん「それって、医療上の目的に対してじゅうぶん役に立ってるってことでしょ。ロジスティック回帰も同じじゃない？用途に見合った性能があるって自信を持っていえれば、ところどころ理解が追い付かなくても、使用していいと思う。世の中にはね、いろんな方法が使われてる。でも、すべて3つの理由で正当化されるんだよ。数学と自然科学が支えている、コミュニティが支えている、そして目的が支えている。それぞれが100%じゃなくても、この3つが補いあうことができれば使う意味があるんだ」
+お父さん「それって、医療上の目的に対してじゅうぶん役に立ってるってことでしょ。ロジスティック回帰も同じじゃない？用途に見合った性能があるって自信を持っていえれば、ところどころ理解が追い付かなくても、使用していいと思う。世の中にはね、いろんな方法が使われてる。でも、すべて3つの理由で正当化されるんだよ」
+:::
+
+- 数学と自然科学が支えている
+- コミュニティが支えている
+- 使用する目的が支えている
+
+::: voice-father
+お父さん「それぞれが100%じゃなくても、この3つが支えあえれば使う意味があるんだ」
 ::: 
 
 ::: voice-daughter
-私「そういうもんかな。納得したような、まだ霧が残っているような気もする。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由は分かったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
+私「そういうもんかな。納得したような、まだ霧が残っているような気もする。まあいいや、疲れてきたし。性別のオッズ比が無限大になった理由はわかったよ。尤度関数にデータを代入したら、回帰係数の解が変になるような式になったってわけね」
 ::: 
 :::::::::::::::::::::::::::::::::
 
