--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Adjusting for Bias V − Simpson's paradox
 
 ::: {.serif-block .text-right}
-Keywords: confounding/collapsibility, effect measure, generalized linear model
+Keywords: confounding/collapsibility, effect measure, generalized linear model, observational study, simulation
 :::
 
 ------------------------------------------------------------------------
@@ -176,7 +176,7 @@ Keywords: confounding/collapsibility, effect measure, generalized linear model
 :::
 
 ::: voice-daughter
-私「賛成」
+私「賛成。いちご大福あるから持ってくる」
 ::: 
 
 ::: voice-father
@@ -188,7 +188,7 @@ Keywords: confounding/collapsibility, effect measure, generalized linear model
 ::: 
 
 ::: voice-father
-お父さん「そうでしょ。でも、疫学研究では、コーヒーを飲む習慣のある集団と、きちんと比較できるようなコントロールを選ぶことは難しい。だから疫学の教科書では、集団同士を比較するときには、第3の因子が隠れていないか注意せよと、必ず書いてある」
+お父さん「そうでしょ。でも、観察研究では、コーヒーを飲む習慣のある集団と、きちんと比較できるようなコントロールを選ぶことは難しい。だから疫学の教科書では、集団同士を比較するときには、第3の因子が隠れていないか注意せよと、必ず書いてある」
 ::: 
 
 ::: voice-daughter
@@ -230,7 +230,7 @@ Keywords: confounding/collapsibility, effect measure, generalized linear model
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。これが疫学でいう交絡因子。交絡調整の意味は数字で示すと一番早い。Simpson のパラドックスを使って説明しよう」
+お父さん「そういうこと。これが疫学でいう交絡因子。交絡調整の意味は数字で示すと一番早い。**Simpsonのパラドックス**っていう現象を使って説明しよう」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -278,7 +278,7 @@ Keywords: confounding/collapsibility, effect measure, generalized linear model
 ::: 
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note title="glm()を用いた膵がんデータの解析"}
+::: {.callout-note appearance="simple" title="glm()を用いた膵がんデータの解析"}
 交絡調整のための統計手法として、層別解析以外に一般化線型モデルもよく用いられます。オッズ比のモデルであるロジスティック回帰は、`link="logit"`を用いた`glm()`に、リスク比は`link="log"`に対応していましたね。以下のコードでは調整前のオッズ比・リスク比は`smoke`を入れないモデルで、調整後のオッズ比・リスク比は`smoke`を入れたモデルで推定しています。
 :::
 
@@ -331,8 +331,20 @@ print(risk_ratio2)
 ### Simpsonのパラドックスが起きる条件
 
 ::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「やっぱりトリックに見えちゃうな、何が起きてるのやら。とりあえず調整しとけっていいたいの？」
+::: 
+
 ::: voice-father
-お父さん「なにが起きたか整理しよう。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
+お父さん「えっとね、いちばん伝えたいことから話すね。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない。たとえばランダム化臨床試験とかね」
+::: 
+
+::: voice-daughter
+私「うん、その説明はわかりやすい」
+::: 
+
+::: voice-father
+お父さん「じゃあ、その次になにが起きたか整理しよう。まず前提になるのが、喫煙が膵がんのリスク因子だってこと。これはいいよね」
 ::: 
 
 ::: voice-daughter
@@ -348,11 +360,11 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「うん、喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。これは、当時、たばこを吸いながらコーヒーを飲んでいたことを表している」
+お父さん「喫煙群と非喫煙群でコーヒー摂取割合に大きな差があるでしょ。この現象が起きた理由は、コーヒー摂取と喫煙に強い関連があったため、ということ。これは、当時、たばこを吸いながらコーヒーを飲んでいたことを表している」
 ::: 
 
 ::: voice-daughter
-私「時代を感じるね、仕事終わったらくつろぎたい気持ちはめっちゃわかる」
+私「時代を感じるね、仕事の合間に寛ぎたい気持ちはめっちゃわかる」
 ::: 
 
 ::: voice-father
@@ -367,46 +379,13 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-daughter
-私「曝露とアウトカムと第3の変数の関係性ねえ。交絡の話ってまあまあややこしいね」
-::: 
-
-::: voice-father
-お父さん「交絡って、言葉自体になじみがないこともあって複雑に思うだろうけど、実際の研究ではもっとシンプルに考えることもできる。研究の原則としてときどき使う"ceteris paribus"というラテン語があってね。"All other things being equal"くらいの意味なんだけど、比較する集団で条件をそろえたら、交絡によるバイアスは生じない」
-::: 
-
-
-### Simpsonのパラドックスと交絡は同じ概念ではない？
-
-::: voice-daughter
-私「さっきの2つの条件を確認する時間がほしいな。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か」
-::: 
-
-::: voice-father
-お父さん「表で起きたことはそういうことで、これがSimpsonのパラドックスだね。でもね、正確にいうとSimpsonのパラドックスと交絡は、数学的には異なる現象なんだ。交絡はそんなに単純な問題じゃない。直感的な説明をするとね。層別前の解析は集団全体のオッズ比でしょ」
-::: 
-
-::: voice-daughter
-私「そうだね」
-::: 
-
-::: voice-father
-お父さん「当たり前だけど、層別後のオッズ比は、喫煙集団のオッズ比と非喫煙集団のオッズ比だよね。どっちが真値なんだろう？ターゲット集団によって真値が変わっていいの？」
-::: 
-
-::: voice-daughter
-私「ん？えっと、そうだね、コーヒーが健康に悪いかどうかは個人差ないと思う」
-::: 
-
-::: voice-father
-お父さん「うん。この事例でいえば喫煙が交絡因子なのは間違いないんだよ。でも一般には、層別前と層別後のどっちのオッズ比が真値なのか、統計学の枠組みで決めるロジックはないんだ。データがどんな確率分布に従っているか、誰も知らないからね」
-::: 
-
-::: voice-daughter
-私「へー」
+私「曝露とアウトカムと第3の変数の関係性ねえ。2つの条件を確認する時間がほしいな。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か。確かにそうなる。交絡の話ってまあまあややこしいね」
 ::: 
 :::::::::::::::::::::::::::::::::
 
 ### 文献
+
+- Simpson EH. The interpretation of interaction in contingency tables. J Royal Stat Soc B 1951;13:238-41
 
 - [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
